--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,12 +1,20 @@
+<% def link_to(name, url)
+  return "<a href='#{url}'>#{name}</a>"
+  end
+  %>
+
 <html>
   <body>
-    <h1>You're using a layout</h1>
-    <p>
-      <h3> I'm a header</h3>
-      <p>Put things in the header</p>
-      <a href='me.html'>Me</a>
+    <ul >
+      <li style="display: inline;"><a href='me.html'>Me</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://google.com'>Google</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><%= link_to('Bing', 'http://bing.com') %></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><%= link_to('Yahoo!', 'http://yahoo.com') %></li>
+    </ul>
 
-    </p>
     <hr />
     <div>
       <%= yield %>
